--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 websockets = "^12.0"
 pytest-asyncio = "^0.23.8"
+fastapi = {extras = ["standard"], version = "^0.112.1"}
+requests = "^2.32.3"
+httpx = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
