--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest-asyncio = "^0.23.8"
 fastapi = {extras = ["standard"], version = "^0.112.1"}
 requests = "^2.32.3"
 httpx = "^0.27.0"
+pytest-bdd = "^7.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,3 +29,4 @@ log_cli = true
 log_cli_level = "INFO"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+bdd_features_base_dir = "tests/feature_tests/features/"
