--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -52,6 +52,8 @@
 	// "postCreateCommand": "kubectl version",
 	// Use 'postStartCommand' to run commands after the container is created like starting minikube.
 	"postStartCommand": "nohup bash -c 'minikube start &' > minikube.log 2>&1"
+	//eval $(minikube docker-env)
+
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
