--- a/.vscode/.env
+++ b/.vscode/.env
@@ -1,3 +1,8 @@
 SERVER_IP=192.168.49.2
 #SERVER_IP=127.0.0.1
 SERVER_PORT=30000
+#USEFAKE_REDIS=True
+USE_REDIS_FOR_STATE_SERVER=True
+REDIS_HOST=192.168.49.2
+REDIS_PORT=30001
+LOG_LEVEL="debug"
