--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python Debugger: server",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "tests/serve.py",
+            "console": "integratedTerminal"
         }
     ]
 }
