--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,14 @@ fastapi = {extras = ["standard"], version = "^0.112.1"}
 requests = "^2.32.3"
 httpx = "^0.27.0"
 pytest-bdd = "^7.2.0"
+redis = "^5.0.8"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 assertpy = "^1.1"
 black = "^24.8.0"
+fakeredis = "^2.24.1"
 
 [build-system]
 requires = ["poetry-core"]
