--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.32.3"
 httpx = "^0.27.0"
 pytest-bdd = "^7.2.0"
 redis = "^5.0.8"
+pytango = "^9.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +29,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 serve = "mv.server:serve"
+serve_tango = "mv.tango_server:serve"
 
 [tool.pytest.ini_options]
 log_cli = true
