--- a/.vscode/.env
+++ b/.vscode/.env
@@ -1,6 +1,6 @@
 #SERVER_IP=192.168.49.2
 #SERVER_IP=127.0.0.1
-SERVER_PORT=30000
+#SERVER_PORT=30000
 #USEFAKE_REDIS=True
 PERSIST_STATE_IN_FILE=True
 #USE_REDIS_FOR_STATE_SERVER=True
